test/negative/504_continue_outside_loop.fx
// expect: loop
fun f() { continue }
f()
